--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "svelte": "^3.55.0"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "audio-analyser": "^1.0.2",
+    "sirv-cli": "^2.0.0",
+    "three": "^0.149.0"
   },
   "description": "---",
   "main": "rollup.config.js",
