Construction du chemin

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "audio-analyser": "^1.0.2",
+    "package": "^1.0.1",
     "sirv-cli": "^2.0.0",
-    "three": "^0.149.0"
+    "three": "^0.149.0",
+    "three-audio-visualization": "^1.3.5"
   },
   "description": "---",
   "main": "rollup.config.js",
